--- a/kadai_015/kadai_015.html
+++ b/kadai_015/kadai_015.html
@@ -13,11 +13,10 @@
  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Noto+Color+Emoji&display=swap" rel="stylesheet">
  </head>
  <body>
-  <h1><span class="blue">M</span>Y<span class="pink">P</span>ROFILE</h1>
-  
-  <div id="basic">
+  <h1 class="josefin-sans"><span class="blue">M</span>Y<span class="pink">P</span>ROFILE</h1>
+ <div id="basic">
     <h2 class="pink">名前</h2>
-    <p>侍　太郎</p>
+    <p>侍 太郎</p>
     <h2 class="blue">生年月日</h2>
     <p>1990年1月1日</p>
     <h2 class="pink">血液型</h2>
